--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,30 @@
 ---
 ---
+@misc{carrascovargas2023geometric,
+      title={The geometric subgroup membership problem}, 
+      author={Nicanor Carrasco-Vargas},
+      year={2023},
+      eprint={2303.14820},
+      archivePrefix={arXiv},
+      primaryClass={math.DS}
+      abstract={We show that every infinite graph which is locally finite and connected admits a translation-like action by $\mathbb{Z}$ such that the distance between a vertex $v$ and $v∗1$ is uniformly bounded by 3. This action can be taken to be transitive if and only if the graph has one or two ends. This strengthens a theorem by Brandon Seward. 
+Our proof is constructive, and thus it can be made computable. More precisely, we show that a finitely generated group with decidable word problem admits a translation-like action by $\mathbb{Z}$ which is computable, and satisfies an extra condition which we call decidable orbit membership problem.
+As an application we show that on any finitely generated infinite group with decidable word problem, effective subshifts attain all effectively closed  Medvedev degrees. This extends a classification proved by Joseph Miller for $\mathbb{Z}^{d}, d≥1$. 
+},
+pdf={paper_1.pdf}
+}
+
+@misc{carrascovargas2023characterization,
+      title={The characterization of infinite Eulerian graphs, a short and computable proof}, 
+      author={Nicanor Carrasco-Vargas},
+      year={2023},
+      eprint={2305.17998},
+      archivePrefix={arXiv},
+      primaryClass={math.CO}
+      abstract={In this paper we present a short proof of a theorem by Erdős, Grünwald and Weiszfeld on the characterization of infinite graphs which admit infinite Eulerian trails. In addition, we extend this result with a characterization of which finite trails can be extended to infinite Eulerian trails. Our proof is computable and yields an effective version of this theorem. This exhibits stark contrast with other classical results in the theory of infinite graphs which are not effective.},
+      pdf={paper_2.pdf}
+}
+
 
 @string{aps = {American Physical Society,}}
 
