--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,8 @@
 Our proof is constructive, and thus it can be made computable. More precisely, we show that a finitely generated group with decidable word problem admits a translation-like action by $\mathbb{Z}$ which is computable, and satisfies an extra condition which we call decidable orbit membership problem.
 As an application we show that on any finitely generated infinite group with decidable word problem, effective subshifts attain all effectively closed  Medvedev degrees. This extends a classification proved by Joseph Miller for $\mathbb{Z}^{d}, d≥1$. 
 },
-pdf={paper_1.pdf}
+pdf={paper_1.pdf},
+url={https://arxiv.org/abs/2303.14820}
 }
 
 @misc{carrascovargas2023characterization,
@@ -22,7 +23,8 @@ pdf={paper_1.pdf}
       archivePrefix={arXiv},
       primaryClass={math.CO}
       abstract={In this paper we present a short proof of a theorem by Erdős, Grünwald and Weiszfeld on the characterization of infinite graphs which admit infinite Eulerian trails. In addition, we extend this result with a characterization of which finite trails can be extended to infinite Eulerian trails. Our proof is computable and yields an effective version of this theorem. This exhibits stark contrast with other classical results in the theory of infinite graphs which are not effective.},
-      pdf={paper_2.pdf}
+      pdf={paper_2.pdf},
+      url={https://arxiv.org/abs/2303.14820}
 }
 
 
