--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,7 @@ url={https://arxiv.org/abs/2303.14820}
       year={2023},
       eprint={2305.17998},
       archivePrefix={arXiv},
-      primaryClass={math.CO}
+      primaryClass={math.CO},
       abstract={In this paper we present a short proof of a theorem by Erdős, Grünwald and Weiszfeld on the characterization of infinite graphs which admit infinite Eulerian trails. In addition, we extend this result with a characterization of which finite trails can be extended to infinite Eulerian trails. Our proof is computable and yields an effective version of this theorem. This exhibits stark contrast with other classical results in the theory of infinite graphs which are not effective.},
       pdf={paper_2.pdf},
       url={https://arxiv.org/abs/2303.14820}
