--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,9 @@
       title={The geometric subgroup membership problem}, 
       author={Nicanor Carrasco-Vargas},
       year={2023},
-      eprint={2303.14820},
+      preview={brownian-motion.gif},
+      bibtex_show={true},
+      arxiv={2303.14820},
       archivePrefix={arXiv},
       primaryClass={math.DS},
       abstract={We show that every infinite graph which is locally finite and connected admits a translation-like action by $\mathbb{Z}$ such that the distance between a vertex $v$ and $v∗1$ is uniformly bounded by 3. This action can be taken to be transitive if and only if the graph has one or two ends. This strengthens a theorem by Brandon Seward. 
@@ -18,8 +20,9 @@ url={https://arxiv.org/abs/2303.14820}
 @misc{carrascovargas2023characterization,
       title={The characterization of infinite Eulerian graphs, a short and computable proof}, 
       author={Nicanor Carrasco-Vargas},
+      bibtex_show={true},
       year={2023},
-      eprint={2305.17998},
+      arxiv={2305.17998},
       archivePrefix={arXiv},
       primaryClass={math.CO},
       abstract={In this paper we present a short proof of a theorem by Erdős, Grünwald and Weiszfeld on the characterization of infinite graphs which admit infinite Eulerian trails. In addition, we extend this result with a characterization of which finite trails can be extended to infinite Eulerian trails. Our proof is computable and yields an effective version of this theorem. This exhibits stark contrast with other classical results in the theory of infinite graphs which are not effective.},
