--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -1,7 +1,7 @@
 ---
 ---
 @misc{carrascovargas2023geometric,
-      title={The geometric subgroup membership problem}, 
+      title={TALK geometric subgroup membership problem}, 
       author={Nicanor Carrasco-Vargas},
       year={2023},
       preview={arxiv.png},
