--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -1,32 +1,24 @@
 ---
 ---
-@misc{carrascovargas2023geometric,
-      title={TALK geometric subgroup membership problem}, 
+@misc{talk_2,
+      title={Medvedev degrees of effective subshifts on groups}, 
       author={Nicanor Carrasco-Vargas},
       year={2023},
-      preview={arxiv.png},
-      bibtex_show={true},
-      arxiv={2303.14820},
-      archivePrefix={arXiv},
-      primaryClass={math.DS},
-      abstract={We show that every infinite graph which is locally finite and connected admits a translation-like action by $\mathbb{Z}$ such that the distance between a vertex $v$ and $v∗1$ is uniformly bounded by 3. This action can be taken to be transitive if and only if the graph has one or two ends. This strengthens a theorem by Brandon Seward. 
-Our proof is constructive, and thus it can be made computable. More precisely, we show that a finitely generated group with decidable word problem admits a translation-like action by $\mathbb{Z}$ which is computable, and satisfies an extra condition which we call decidable orbit membership problem.
-As an application we show that on any finitely generated infinite group with decidable word problem, effective subshifts attain all effectively closed  Medvedev degrees. This extends a classification proved by Joseph Miller for $\mathbb{Z}^{d}, d≥1$. 
-},
-pdf={paper_1.pdf},
-url={https://arxiv.org/abs/2303.14820}
+      abstract={It is known that the class of effective subshifts in $\mathbb{Z}$ can attain all $\Pi_1$ Medvedev degrees. In this talk we will discuss how this result extends to the class of finitely generated groups with decidable word problem. 
+      This involves codifying translation-like actions by $\mathbb{Z}$ as a subshift, and takes us to the problem of the computability of translation-like actions on locally finite graphs},
+      slides={talk_2.pdf},
+      note={Journées annuelles SDA2, Toulouse, France},
+      url={https://indico.math.cnrs.fr/event/9357/}
 }
 
-@misc{carrascovargas2023characterization,
-      title={The characterization of infinite Eulerian graphs, a short and computable proof}, 
+@misc{talk_3,
+      title={Medvedev degrees and subshifts}, 
       author={Nicanor Carrasco-Vargas},
-      bibtex_show={true},
       year={2023},
-      arxiv={2305.17998},
-      preview={arxiv.png},
-      archivePrefix={arXiv},
-      primaryClass={math.CO},
-      abstract={In this paper we present a short proof of a theorem by Erdős, Grünwald and Weiszfeld on the characterization of infinite graphs which admit infinite Eulerian trails. In addition, we extend this result with a characterization of which finite trails can be extended to infinite Eulerian trails. Our proof is computable and yields an effective version of this theorem. This exhibits stark contrast with other classical results in the theory of infinite graphs which are not effective.},
-      pdf={paper_2.pdf},
-      url={https://arxiv.org/abs/2303.14820}
+      abstract={Abstract. In 1961 Wang translated a first order logic problem into a problem about tiling the plane with finitely many colored squares [wang_proving_1960]. In dynamical systems terminology this is a subshift. The subject evolved into a rich field of interaction between recursive and dynamical notions, and indeed some dynamical questions have recursion-theoretic answers. Recent and important examples being the characterization of entropies of multidimensional subshifts of finite type as all \Pi_{1}^{0} nonnegative real numbers, and the class of factors of subactions of these systems as the computable actions on effectively closed subsets of the Cantor space [hochman_characterization_2010, hochman_dynamics_2009]. 
+      A classical result proved by Hanf and Myers states the existence of a finite set of square colored tiles such that all correct tilings of the plane are uncomputable [hanf_nonrecursive_1974, kerr_ergodic_2016]. This is the kind of complexity measured by Medvedev degrees: a set has zero Medvedev degree if and only if it has some computable point. This notion applied to subshifts interacts well with the dynamics, due to the fact that morphisms are automatically computable. We obtain a dynamical invariant for subshifts which in some aspects behaves like entropy, but instead of statistical uncertainty it measures uncomptuability. 
+      A theorem proved by Miller characterizes the class of Medvedev degrees of effective subshifts on \Z  as all \Pi_{1}^{0} degrees [miller_two_2012]. In this talk I will show how this result generalizes to a bigger class of groups, namely, all finitely generated infinite groups with decidable word problem [carrasco-vargas_geometric_2023]. This is not a consequence of Miller's result, and the proof requires to effectivize a theorem proved by Seward in geometric group theory. The proof has some byproducts of independent interest. For example, that all computable groups satisfying obvious constraints have a Cayley graph with a computable infinite Hamiltonian path. },
+      slides={talk_3.pdf},
+      note={Journées annuelles SDA2, Toulouse, France},
+      url={https://indico.math.cnrs.fr/event/9357/}
 }
