--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -4,21 +4,43 @@
       title={Medvedev degrees of effective subshifts on groups}, 
       author={Nicanor Carrasco-Vargas},
       year={2023},
+      
       abstract={It is known that the class of effective subshifts in $\mathbb{Z}$ can attain all $\Pi_1$ Medvedev degrees. In this talk we will discuss how this result extends to the class of finitely generated groups with decidable word problem. 
       This involves codifying translation-like actions by $\mathbb{Z}$ as a subshift, and takes us to the problem of the computability of translation-like actions on locally finite graphs},
       slides={talk_2.pdf},
       note={Journées annuelles SDA2, Toulouse, France},
-      url={https://indico.math.cnrs.fr/event/9357/}
+      website={https://indico.math.cnrs.fr/event/9357/}
 }
 
 @misc{talk_3,
       title={Medvedev degrees and subshifts}, 
       author={Nicanor Carrasco-Vargas},
       year={2023},
-      abstract={Abstract. In 1961 Wang translated a first order logic problem into a problem about tiling the plane with finitely many colored squares [wang_proving_1960]. In dynamical systems terminology this is a subshift. The subject evolved into a rich field of interaction between recursive and dynamical notions, and indeed some dynamical questions have recursion-theoretic answers. Recent and important examples being the characterization of entropies of multidimensional subshifts of finite type as all \Pi_{1}^{0} nonnegative real numbers, and the class of factors of subactions of these systems as the computable actions on effectively closed subsets of the Cantor space [hochman_characterization_2010, hochman_dynamics_2009]. 
-      A classical result proved by Hanf and Myers states the existence of a finite set of square colored tiles such that all correct tilings of the plane are uncomputable [hanf_nonrecursive_1974, kerr_ergodic_2016]. This is the kind of complexity measured by Medvedev degrees: a set has zero Medvedev degree if and only if it has some computable point. This notion applied to subshifts interacts well with the dynamics, due to the fact that morphisms are automatically computable. We obtain a dynamical invariant for subshifts which in some aspects behaves like entropy, but instead of statistical uncertainty it measures uncomptuability. 
-      A theorem proved by Miller characterizes the class of Medvedev degrees of effective subshifts on \Z  as all \Pi_{1}^{0} degrees [miller_two_2012]. In this talk I will show how this result generalizes to a bigger class of groups, namely, all finitely generated infinite groups with decidable word problem [carrasco-vargas_geometric_2023]. This is not a consequence of Miller's result, and the proof requires to effectivize a theorem proved by Seward in geometric group theory. The proof has some byproducts of independent interest. For example, that all computable groups satisfying obvious constraints have a Cayley graph with a computable infinite Hamiltonian path. },
+      abstract={talk_3_abstract.pdf}
       slides={talk_3.pdf},
-      note={Journées annuelles SDA2, Toulouse, France},
-      url={https://indico.math.cnrs.fr/event/9357/}
+      pdf={talk_3_abstract.pdf},
+      note={16th International Conference on Computability, Complexity and Randomness. Kochel, Germany},
+      website={http://cca-net.de/ccr2023/}
+}
+
+
+@misc{talk_4,
+      title={Un invariante para subshifts de naturaleza recursiva}, 
+      author={Nicanor Carrasco-Vargas},
+      year={2023},
+      month={sep},
+      abstract={En 1974 Hanf y Myers exhibiron un subshift de tipo finito en $\mathbb{Z}^2$ cuyas configuraciones son todas incalculables en el                 sentido de la teoria de la recursión. En esta charla discutiremos cómo este fenómeno se captura con un invariante dinámico para                   subshifts, el invariante m. Este invariante comparte algunas propiedades con la entropía topológica como no aumentar por factores.                También se relaciona con otras propiedades de origen dinámico y topológico tales como la aperiodicidad o la existencia puntos                     aislados en el espacio de todos los subshifts.},
+      note={Seminario de Sistemas Dinámicos de Santiago, Santiago, Chile},
+      website={http://www.dynamicalsystems.cl/?page_id=286},
+}
+@misc{talk_5,
+      title={Un invariante para subshifts de naturaleza recursiva}, 
+      author={Nicanor Carrasco-Vargas},
+      year={2023},
+      month={dec},
+      abstract={En 1974 Hanf y Myers exhibiron un subshift de tipo finito en $\mathbb{Z}^2$ cuyas configuraciones son todas incalculables en el                 sentido de la teoria de la recursión. En esta charla discutiremos cómo este fenómeno se captura con un invariante dinámico para                   subshifts, el invariante m. Este invariante comparte algunas propiedades con la entropía topológica como no aumentar por factores.                También se relaciona con otras propiedades de origen dinámico y topológico tales como la aperiodicidad o la existencia puntos                     aislados en el espacio de todos los subshifts.},
+      note={Encuentro sociedad matemática de chile 2023, Santiago, Chile},
+      slides={talk_5.pdf},
+      pdf={talk_5_abstract.pdf},
+      website={https://sites.google.com/uchile.cl/somachi2023/actividades-cient%C3%ADficas/sesiones-tem%C3%A1ticas},
 }
