--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -16,7 +16,7 @@
       title={Medvedev degrees and subshifts}, 
       author={Nicanor Carrasco-Vargas},
       year={2023},
-      abstract={talk_3_abstract.pdf}
+      abstract={talk_3_abstract.pdf},
       slides={talk_3.pdf},
       pdf={talk_3_abstract.pdf},
       note={16th International Conference on Computability, Complexity and Randomness. Kochel, Germany},
