--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -4,7 +4,7 @@
       title={Medvedev degrees of effective subshifts on groups}, 
       author={Nicanor Carrasco-Vargas},
       year={2023},
-      
+      month={march},
       abstract={It is known that the class of effective subshifts in $\mathbb{Z}$ can attain all $\Pi_1$ Medvedev degrees. In this talk we will discuss how this result extends to the class of finitely generated groups with decidable word problem. 
       This involves codifying translation-like actions by $\mathbb{Z}$ as a subshift, and takes us to the problem of the computability of translation-like actions on locally finite graphs},
       slides={talk_2.pdf},
@@ -16,6 +16,7 @@
       title={Medvedev degrees and subshifts}, 
       author={Nicanor Carrasco-Vargas},
       year={2023},
+      month={jul},
       abstract={talk_3_abstract.pdf},
       slides={talk_3.pdf},
       pdf={talk_3_abstract.pdf},
