--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -4,7 +4,7 @@
       title={Medvedev degrees of effective subshifts on groups}, 
       author={Nicanor Carrasco-Vargas},
       year={2023},
-      month={march},
+      month={March},
       abstract={It is known that the class of effective subshifts in $\mathbb{Z}$ can attain all $\Pi_1$ Medvedev degrees. In this talk we will discuss how this result extends to the class of finitely generated groups with decidable word problem. 
       This involves codifying translation-like actions by $\mathbb{Z}$ as a subshift, and takes us to the problem of the computability of translation-like actions on locally finite graphs},
       slides={talk_2.pdf},
@@ -16,8 +16,8 @@
       title={Medvedev degrees and subshifts}, 
       author={Nicanor Carrasco-Vargas},
       year={2023},
-      month={jul},
-      abstract={talk_3_abstract.pdf},
+      month={July},
+      abstract={The abstract is in the "pdf" button},
       slides={talk_3.pdf},
       pdf={talk_3_abstract.pdf},
       note={16th International Conference on Computability, Complexity and Randomness. Kochel, Germany},
@@ -29,7 +29,7 @@
       title={Un invariante para subshifts de naturaleza recursiva}, 
       author={Nicanor Carrasco-Vargas},
       year={2023},
-      month={sep},
+      month={September},
       abstract={En 1974 Hanf y Myers exhibiron un subshift de tipo finito en $\mathbb{Z}^2$ cuyas configuraciones son todas incalculables en el                 sentido de la teoria de la recursión. En esta charla discutiremos cómo este fenómeno se captura con un invariante dinámico para                   subshifts, el invariante m. Este invariante comparte algunas propiedades con la entropía topológica como no aumentar por factores.                También se relaciona con otras propiedades de origen dinámico y topológico tales como la aperiodicidad o la existencia puntos                     aislados en el espacio de todos los subshifts.},
       note={Seminario de Sistemas Dinámicos de Santiago, Santiago, Chile},
       website={http://www.dynamicalsystems.cl/?page_id=286},
@@ -38,8 +38,8 @@
       title={Un invariante para subshifts de naturaleza recursiva}, 
       author={Nicanor Carrasco-Vargas},
       year={2023},
-      month={dec},
-      abstract={En 1974 Hanf y Myers exhibiron un subshift de tipo finito en $\mathbb{Z}^2$ cuyas configuraciones son todas incalculables en el                 sentido de la teoria de la recursión. En esta charla discutiremos cómo este fenómeno se captura con un invariante dinámico para                   subshifts, el invariante m. Este invariante comparte algunas propiedades con la entropía topológica como no aumentar por factores.                También se relaciona con otras propiedades de origen dinámico y topológico tales como la aperiodicidad o la existencia puntos                     aislados en el espacio de todos los subshifts.},
+      month={December},
+      abstract={The abstract is in the "pdf" button.},
       note={Encuentro sociedad matemática de chile 2023, Santiago, Chile},
       slides={talk_5.pdf},
       pdf={talk_5_abstract.pdf},
