--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,3 +31,13 @@ url={https://arxiv.org/abs/2303.14820}
       url={https://arxiv.org/abs/2303.14820}
 }
 
+@misc{barbieri2024effective,
+      title={Effective dynamical systems beyond dimension zero and factors of SFTs}, 
+      author={Sebastián Barbieri, Nicanor Carrasco-Vargas, Cristóbal Rojas},
+      year={2024},
+      arxiv={2401.07973},
+      preview={arxiv.png},
+      eprint={2401.07973},
+      archivePrefix={arXiv},
+      primaryClass={math.DS}
+}
