--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -43,3 +43,16 @@ url={https://arxiv.org/abs/2303.14820}
       bibtex_show={true},
       primaryClass={math.DS}
 }
+
+@misc{carrascovargas2024undecidability,
+      title={Undecidability of dynamical properties of SFTs and sofic subshifts on $\mathbb{Z}^2$ and other groups}, 
+      abstract={We study the algorithmic undecidability of abstract dynamical properties for sofic $\mathbb{Z}^2$-subshifts and subshifts of finite type (SFTs) on $\mathbb{Z}^2$. Within the class of sofic $\mathbb{Z}^2$-subshifts, we prove the undecidability of every nontrivial dynamical property. We show that although this is not the case for $\mathbb{Z}^2$-SFTs, it is still possible to establish the undecidability of a large class of dynamical properties. This result is analogous to the Adian-Rabin undecidability theorem for group properties. Besides dynamical properties, we consider dynamical invariants of $\mathbb{Z}^2$-SFTs taking values in partially ordered sets. It is well known that the topological entropy of a $\mathbb{Z}^2$-SFT can not be effectively computed from an SFT presentation. We prove a generalization of this result to \emph{every} dynamical invariant which is nonincreasing by factor maps, and satisfies a mild additional technical condition. Our results are also valid for $\mathbb{Z}^{d}$, d≥2, and more generally for any group where determining whether a subshift of finite type is empty is undecidable. },
+      author={Nicanor Carrasco-Vargas},
+      year={2024},
+      arxiv={2401.10347},
+      archivePrefix={arXiv},
+      bibtex_show={true},
+      preview={arxiv.png},
+      pdf={Paper_3.pdf},
+      primaryClass={math.DS}
+}
