--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -54,5 +54,6 @@ url={https://arxiv.org/abs/2303.14820}
       bibtex_show={true},
       preview={arxiv.png},
       pdf={Paper_3.pdf},
+      poster={Paper_3_poster.pdf},
       primaryClass={math.DS}
 }
