--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -45,3 +45,12 @@
       pdf={talk_5_abstract.pdf},
       website={https://sites.google.com/uchile.cl/somachi2023/actividades-cient%C3%ADficas/sesiones-tem%C3%A1ticas},
 }
+@misc{talk_6,
+      title={Are all dynamical properties of $\mathbb{Z}^2$-SFTs undecidable?}, 
+      author={Nicanor Carrasco-Vargas},
+      year={2024},
+      month={February},
+      note={Poster for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. },
+      poster={Paper_3_poster.pdf},
+      website={https://conferences.cirm-math.fr/3007.html},
+}
