--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -54,3 +54,12 @@
       poster={Paper_3_poster.pdf},
       website={https://conferences.cirm-math.fr/3007.html},
 }
+@misc{talk_7,
+      title={A recursionn theoretic invariant for subshifts}, 
+      author={Nicanor Carrasco-Vargas},
+      year={2024},
+      month={February},
+      note={talk for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. },
+      poster={Talk_7.pdf},
+      website={https://conferences.cirm-math.fr/3007.html},
+}
