--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -59,7 +59,7 @@
       author={Nicanor Carrasco-Vargas},
       year={2024},
       month={February},
-      note={talk for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. },
-      poster={Talk_7.pdf},
+      note={Talk for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. },
+      slides={Talk_7.pdf},
       website={https://conferences.cirm-math.fr/3007.html},
 }
