--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -55,7 +55,7 @@
       website={https://conferences.cirm-math.fr/3007.html},
 }
 @misc{talk_7,
-      title={A recursionn theoretic invariant for subshifts}, 
+      title={A recursion-theoretic invariant for subshifts}, 
       author={Nicanor Carrasco-Vargas},
       year={2024},
       month={February},
