--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,7 +28,9 @@ url={https://arxiv.org/abs/2303.14820}
       primaryClass={math.CO},
       abstract={The Erdős, Grünwald and Weiszfeld theorem provides a characterization of infinite graphs which are Eulerian. That is, infinite graphs which admit infinite Eulerian trails. In this article we complement this theorem with a characterization of those finite trails that can be extended to infinite Eulerian trails. This allows us to prove an effective version of the Erdős, Grünwald and Weiszfeld theorem for a class of graphs that includes non locally finite ones, generalizing a theorem of D.Bean.},
       pdf={Paper_2.pdf},
-      url={https://arxiv.org/abs/2303.14820}
+      url={https://arxiv.org/abs/2303.14820},
+      note={Accepted in for publication in <a href="https://www.iospress.com/catalog/journals/computability#author-guidelines">Computability</a>.}
+
 }
 
 @misc{barbieri2024effective,
