--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,7 @@
 @misc{carrascovargas2023geometric,
       title={The geometric subgroup membership problem}, 
       author={Nicanor Carrasco-Vargas},
+      year={},
       preview={arxiv.png},
       bibtex_show={true},
       arxiv={2303.14820},
