--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,8 @@ Our proof is constructive, and thus it can be made computable. More precisely, w
 As an application we show that on any finitely generated infinite group with decidable word problem, effective subshifts attain all effectively closed  Medvedev degrees. This extends a classification proved by Joseph Miller for $\mathbb{Z}^{d}, d≥1$. 
 },
 pdf={Paper_1.pdf},
-url={https://arxiv.org/abs/2303.14820}
+url={https://arxiv.org/abs/2303.14820},
+note={Accepted in <a href="https://ems.press/journals/ggd">Groups, Geometry, and Dynamics</a>.}
 }
 
 @misc{carrascovargas2023characterization,
@@ -29,7 +30,7 @@ url={https://arxiv.org/abs/2303.14820}
       abstract={The Erdős, Grünwald and Weiszfeld theorem provides a characterization of infinite graphs which are Eulerian. That is, infinite graphs which admit infinite Eulerian trails. In this article we complement this theorem with a characterization of those finite trails that can be extended to infinite Eulerian trails. This allows us to prove an effective version of the Erdős, Grünwald and Weiszfeld theorem for a class of graphs that includes non locally finite ones, generalizing a theorem of D.Bean.},
       pdf={Paper_2.pdf},
       url={https://arxiv.org/abs/2303.14820},
-      note={To appear in <a href="https://www.iospress.com/catalog/journals/computability">Computability</a>.}
+      note={Accepted in <a href="https://www.iospress.com/catalog/journals/computability">Computability</a>.}
 
 }
 
