--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -63,3 +63,12 @@
       slides={Talk_7.pdf},
       website={https://conferences.cirm-math.fr/3007.html},
 }
+@misc{talk_8,
+      title={Tilings of the plane: aperiodicity, undecidability, and a Rice theorem}, 
+      author={Nicanor Carrasco-Vargas},
+      year={2024},
+      month={May},
+      note={Talk for CENIA seminar},
+      slides={Talk_8.pdf},
+      poster={Talk_9_poster.pdf},
+}
