--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -70,5 +70,5 @@
       month={May},
       note={Talk for CENIA seminar},
       slides={Talk_8.pdf},
-      poster={Talk_9_poster.pdf},
+      poster={Talk_8_poster.jpg},
 }
