--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -72,3 +72,11 @@
       slides={Talk_8.pdf},
       poster={Talk_8_poster.jpg}
 }
+@misc{talk_9,
+      title={Tilings of the plane: aperiodicity, undecidability, and a Rice theorem}, 
+      author={Nicanor Carrasco-Vargas},
+      year={2024},
+      month={May},
+      note={Talk for postgraduate school UFRO - Lican Ray},
+      slides={Talk_9.pdf},
+}
