--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -60,3 +60,11 @@ note={Accepted in <a href="https://ems.press/journals/ggd">Groups, Geometry, and
       poster={Paper_3_poster.pdf},
       primaryClass={math.DS}
 }
+@misc{barbieri2024medvedev,
+      title={Medvedev degrees of subshifts on groups}, 
+      author={Sebastián Barbieri and Nicanor Carrasco-Vargas},
+      year={2024},
+      arxiv={2406.12777},
+      preview={arxiv.png}, bibtex_show={true},
+      primaryClass={id='math.DS' full_name='Dynamical Systems' is_active=True alt_name=None in_archive='math' is_general=False description='Dynamics of differential equations and flows, mechanics, classical few-body problems, iterations, complex dynamics, delayed differential equations'}
+}
