--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -63,7 +63,8 @@ note={Accepted in <a href="https://ems.press/journals/ggd">Groups, Geometry, and
 @misc{barbieri2024medvedev,
       title={Medvedev degrees of subshifts on groups}, 
       author={Sebastián Barbieri and Nicanor Carrasco-Vargas},
-      year={2024},
+      year={2024}, abstract={The Medvedev degree of a subshift is a dynamical invariant of computable origin that can be used to compare the complexity of subshifts that contain only uncomputable configurations. We develop theory to describe how these degrees can be transferred from one group to another through algebraic and geometric relations, such as quotients, subgroups, translation-like actions and quasi-isometries.
+We use the aforementioned tools to study the possible values taken by this invariant on subshifts of finite type on some finitely generated groups. We obtain a full classification for some classes, such as virtually polycyclic groups and branch groups with decidable word problem. We also show that all groups which are quasi-isometric to the hyperbolic plane admit SFTs with nonzero Medvedev degree. Furthermore, we provide a classification of the degrees of sofic subshifts for several classes of groups.},
       arxiv={2406.12777},
       preview={arxiv.png}, bibtex_show={true},
       primaryClass={id='math.DS' full_name='Dynamical Systems' is_active=True alt_name=None in_archive='math' is_general=False description='Dynamics of differential equations and flows, mechanics, classical few-body problems, iterations, complex dynamics, delayed differential equations'}
