--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,21 +1,18 @@
 ---
 ---
-@misc{carrascovargas2023geometric,
-      title={The geometric subgroup membership problem}, 
+@article{carrascovargas2023geometric,
+      title={Translation-like actions by $\mathbb{Z}$, the subgroup membership problem, and Medvedev degrees of effective subshifts}, 
       author={Nicanor Carrasco-Vargas},
-      year={2023},
-      preview={arxiv.png},
+      journal={Groups, Geometry, and Dynamics},
+      year={2024},
+      pages={published online first},
+      preview={paper.png},
       bibtex_show={true},
-      arxiv={2303.14820},
-      archivePrefix={arXiv},
-      primaryClass={math.DS},
-      abstract={We show that every infinite graph which is locally finite and connected admits a translation-like action by $\mathbb{Z}$ such that the distance between a vertex $v$ and $v∗1$ is uniformly bounded by 3. This action can be taken to be transitive if and only if the graph has one or two ends. This strengthens a theorem by Brandon Seward. 
-Our proof is constructive, and thus it can be made computable. More precisely, we show that a finitely generated group with decidable word problem admits a translation-like action by $\mathbb{Z}$ which is computable, and satisfies an extra condition which we call decidable orbit membership problem.
-As an application we show that on any finitely generated infinite group with decidable word problem, effective subshifts attain all effectively closed  Medvedev degrees. This extends a classification proved by Joseph Miller for $\mathbb{Z}^{d}, d≥1$. 
-},
-pdf={Paper_1.pdf},
-url={https://arxiv.org/abs/2303.14820},
-note={Accepted in <a href="https://ems.press/journals/ggd">Groups, Geometry, and Dynamics</a>.}
+      doi={DOI 10.4171/GGD/817},
+      arxiv={2401.10347},
+      abstract={We show that every infinite, locally finite, and connected graph admits a translation-like action by $\mathbb{Z}$, and that this action can be taken to be transitive exactly when the graph has either one or two ends. The actions constructed satisfy $d(v,v\ast 1)\leq 3$ for every vertex $v$. This strengthens a theorem by Brandon Seward. We also study the effective computability of translation-like actions on groups and graphs. We prove that every finitely generated infinite group with decidable word problem admits a translation-like action by $\mathbb{Z}$ which is computable and satisfies an extra condition which we call decidable orbit membership problem. As a nontrivial application of our results, we prove that for every finitely generated infinite group with decidable word problem, effective subshifts attain all $\Pi_1^0$​ Medvedev degrees. This extends a classification proved by Joseph Miller for $\mathbb{Z}^d,d\geq 1$.},
+      pdf={Paper_1.pdf},
+      url={https://ems.press/journals/ggd/articles/14298058},
 }
 
 @misc{carrascovargas2023characterization,
