--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,18 @@
 ---
 ---
+@misc{carrascovargas2024complexityeulerianpathproblem,
+      title={On the complexity of the Eulerian path problem for infinite graphs}, 
+      author={Nicanor Carrasco-Vargas and Valentino Delle Rose and Cristóbal Rojas},
+      year={2024},
+      preview={arxiv.png},
+      bibtex_show={true},
+      doi={https://doi.org/10.48550/arXiv.2409.03113},
+      arxiv={2409.03113},
+      abstract={
+We revisit the problem of algorithmically deciding whether a given infinite connected graph has an Eulerian path, namely, a path that uses every edge exactly once.  It has been recently observed that this problem is $D_3^0$-complete for graphs that have a computable description, whereas it is $\Pi_2^0$-complete for graphs that have a highly computable description, and that this same bound holds for the class of automatic graphs. A closely related problem consists of determining the number of ends of a graph, namely, the maximum number of distinct infinite connected components the graph can be separated into after removing a finite set of edges. The complexity of this problem for highly computable graphs is known to be $\Pi_2^0$-complete as well. The connection between these two problems lies in that only graphs with one or two ends can have Eulerian paths. In this paper we are interested in understanding the complexity of the infinite Eulerian path problem in the setting where the input graphs are known to have the right number of ends. We find that in this setting the problem becomes strictly easier, and that its exact difficulty varies according to whether the graphs have one or two ends, and to whether the Eulerian path we are looking for is one-way or bi-infinite. For example, we find that deciding existence of a bi-infinite Eulerian path for one-ended graphs is only $\Pi_1^0$-complete if the graphs are highly computable, and that the same problem becomes decidable for automatic graphs. Our results are based on a detailed computability analysis of what we call the Separation Problem, which we believe to be of independent interest. For instance, as a side application, we observe that K\"onig's infinity lemma, well known to be non-effective in general, becomes effective if we restrict to graphs with finitely many ends.  
+},
+      url={https://arxiv.org/abs/2409.03113},
+}
 @article{carrascovargas2023geometric,
       title={Translation-like actions by $\mathbb{Z}$, the subgroup membership problem, and Medvedev degrees of effective subshifts}, 
       author={Nicanor Carrasco-Vargas},
