--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -41,7 +41,7 @@ We revisit the problem of algorithmically deciding whether a given infinite conn
       abstract={The Erdős, Grünwald and Weiszfeld theorem provides a characterization of infinite graphs which are Eulerian. That is, infinite graphs which admit infinite Eulerian trails. In this article we complement this theorem with a characterization of those finite trails that can be extended to infinite Eulerian trails. This allows us to prove an effective version of the Erdős, Grünwald and Weiszfeld theorem for a class of graphs that includes non locally finite ones, generalizing a theorem of D.Bean.},
       pdf={Paper_2.pdf},
       url={https://arxiv.org/abs/2303.14820},
-      note={Accepted in <a href="https://www.iospress.com/catalog/journals/computability">Computability</a>.}
+      note={Accepted in Computability.}
 
 }
 
@@ -55,7 +55,7 @@ We revisit the problem of algorithmically deciding whether a given infinite conn
       archivePrefix={arXiv},
       abstract={Using tools from computable analysis we develop a notion of effectiveness for general dynamical systems as those group actions on arbitrary spaces that contain a computable representative in their topological conjugacy class. Most natural systems one can think of are effective in this sense, including some group rotations, affine actions on the torus and finitely presented algebraic actions. We show that for finitely generated and recursively presented groups, every effective dynamical system is the topological factor of a computable action on an effectively closed subset of the Cantor space. We then apply this result to extend the simulation results available in the literature beyond zero-dimensional spaces. In particular, we show that for a large class of groups, many of these natural actions are topological factors of subshifts of finite type.},
       bibtex_show={true},
-      note={Accepted in <a href="https://www.cambridge.org/core/journals/ergodic-theory-and-dynamical-systems">Ergodic Theory and Dynamical Systems</a>},
+      note={Accepted in Ergodic Theory and Dynamical Systems},
       primaryClass={math.DS}
 }
 @misc{carrascovargas2024rice,
