--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -44,20 +44,18 @@ We revisit the problem of algorithmically deciding whether a given infinite conn
       note={Accepted in Computability.}
 
 }
+@article{BARBIERI_CARRASCO-VARGAS_ROJAS_2024, 
+title={Effective dynamical systems beyond dimension zero and factors of SFTs}, 
+DOI={10.1017/etds.2024.79}, 
+journal={Ergodic Theory and Dynamical Systems}, 
+author={SEBASTIÁN BARBIERI and NICANOR CARRASCO-VARGAS and CRISTÓBAL ROJAS}, 
+year={2024}, 
+preview={paper.png},
+arxiv={2401.07973},
+abstract={Using tools from computable analysis we develop a notion of effectiveness for general dynamical systems as those group actions on arbitrary spaces that contain a computable representative in their topological conjugacy class. Most natural systems one can think of are effective in this sense, including some group rotations, affine actions on the torus and finitely presented algebraic actions. We show that for finitely generated and recursively presented groups, every effective dynamical system is the topological factor of a computable action on an effectively closed subset of the Cantor space. We then apply this result to extend the simulation results available in the literature beyond zero-dimensional spaces. In particular, we show that for a large class of groups, many of these natural actions are topological factors of subshifts of finite type.},
+bibtex_show={true},
+pages={1–41}}
 
-@misc{barbieri2024effective,
-      title={Effective dynamical systems beyond dimension zero and factors of SFTs}, 
-      author={Sebastián Barbieri and Nicanor Carrasco-Vargas and Cristóbal Rojas},
-      year={2024},
-      arxiv={2401.07973},
-      preview={paper.png},
-      eprint={2401.07973},
-      archivePrefix={arXiv},
-      abstract={Using tools from computable analysis we develop a notion of effectiveness for general dynamical systems as those group actions on arbitrary spaces that contain a computable representative in their topological conjugacy class. Most natural systems one can think of are effective in this sense, including some group rotations, affine actions on the torus and finitely presented algebraic actions. We show that for finitely generated and recursively presented groups, every effective dynamical system is the topological factor of a computable action on an effectively closed subset of the Cantor space. We then apply this result to extend the simulation results available in the literature beyond zero-dimensional spaces. In particular, we show that for a large class of groups, many of these natural actions are topological factors of subshifts of finite type.},
-      bibtex_show={true},
-      note={Accepted in Ergodic Theory and Dynamical Systems},
-      primaryClass={math.DS}
-}
 @misc{carrascovargas2024rice,
       title={On a Rice theorem for dynamical properties of SFTs on groups}, 
       abstract={Let G be a group with undecidable domino problem (such as $\mathbb{Z}^2$). We prove the undecidability of all nontrivial dynamical properties for sofic G-subshifts, that such a result fails for SFTs, and an undecidability result for dynamical properties of G-SFTs similar to the Adian-Rabin theorem. For G amenable we prove that topological entropy is not computable from presentations of SFTs, and a more general result for dynamical invariants taking values in partially ordered sets.},
